Added support for parsing message body as form encoded values. Changed to use mj-page.js to enable rendering of equations embedded in HTML.

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/carlhuk/mathjax-api#readme",
   "dependencies": {
+    "body-parser": "^1.14.1",
     "express": "^4.13.3",
     "mathjax-node": "^0.4.0"
   }
