Pin versions to enable repeatable build
It was not possible to rebuild a working version of the app due to
issues with breaking changes in transient dependencies. This change pins
the versions to match the build currently deployed to production. There
are a number of upgrades required, but these will need to be completed
separately. The versions are pinned by using fixed versions in the
package.json, introducing a package-lock.json generated from the live
docker image and pinning the node version for the docker image.

In addition to fixing the build, this PR also:

* Adds an .nvmrc to specify the node version for local development
* Adds a Makefile with our standard targets to make this repo more
  accessible
* Adds a LICENCE file
* Updates the README inline with the changes and to fix the invalid POST
  command for testing whether the API is functional

--- a/package.json
+++ b/package.json
@@ -1,30 +1,18 @@
 {
   "name": "mathjax-api",
-  "version": "1.0.0",
-  "description": "",
+  "description": "A Node.js HTTP API to render MathJax equations as SVG.",
+  "license": "MIT",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/carlhuk/mathjax-api.git"
+    "url": "https://github.com/ONSdigital/mathjax-api"
   },
-  "keywords": [
-    "mathjax",
-    "node",
-    "docker",
-    "express"
-  ],
-  "author": "Carl Hembrough",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/carlhuk/mathjax-api/issues"
-  },
-  "homepage": "https://github.com/carlhuk/mathjax-api#readme",
   "dependencies": {
-    "body-parser": "^1.14.1",
-    "express": "^4.13.3",
-    "mathjax-node": "^0.4.0"
+    "body-parser": "1.17.1",
+    "express": "4.15.2",
+    "mathjax-node": "0.4.0"
   }
 }
